--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,7 @@ jobs:
   build:
 #will be built on Ubuntu os by taking default os version
 
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
 #checkout of sourcecode
 
     steps:
@@ -30,10 +30,5 @@ jobs:
       with:
         dotnet-version: 3.1.101
         #Building project
-    - name: Build with dotnet
-      run: dotnet build --configuration Release
-      working-directory: ./AspNetMonsters.ApplicationInsights
-    - name: Test
-      run: dotnet test
-      working-directory: ./AspNetMonsters.ApplicationInsights
+ 
       
